...
  @override
  Widget build(BuildContext context) {
    final isUpdating = widget.todo != null; // Check if this is an update

    return Scaffold(
      appBar: AppBar(
        title: Text(isUpdating ? "Update Todo" : "Add Todo"),
      ),
      body: Padding(
        padding: const EdgeInsets.all(16.0),
        child: Form(
          key: _formKey,
          child: Column(
...
